# BMP_Filters

./: .gitignore  CMakeLists.txt  readme.md
src/: ActionManager.cpp  ActionManager.h  BMPImageLib.cpp  BMPImageLib.h  Filter.cpp  Filter.h  main.cpp
tests/: CMakeLists.txt  tests.cpp
